--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="robotnordic.css">
+    <script src="index.js" defer></script>
     <title>Robot Nordic</title>
   </head>
   <body>
+    <div id="canvas_container">
+      <canvas id="my_canvas" height="812"></canvas>
+      </div>
+    
+      <div class="wrapper">
+        <div class="sidebar">
+          <a href="index.html">
+          <img class="logo" src="img/logo-01.png" alt="Robot Nordics Logo"></a>
+    
+            <ul>
+                <li><a href="index.html"><i class="forside"></i>Forside</a></li>
+                <li><a href=""><i class="webshop"></i>Webshop</a></li>
+                <li><a href=""><i class="hvem"></i>Om Mona Vander</a></li>
+                <li><a href=""><i class="kontakt"></i>Kontakt</a></li>
+            </ul>
+        </div>
+    </div>
 
   </body>
 </html>
