--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
   <!-- Top Navigation Menu -->
   <div class="sidebar">
-    <a href="#home" class="active">Logo</a>
+    <a href="#home" class="active"><img src="img/logo-01.png" alt="Robot nordics logo" width="50"></a>
+    <img class="dansk" src="img/dansk.jpg" alt="vælg sproget dansk" width="50">
+    <img class="engelsk" src="img/engelsk.png" alt="vælg sproget engelsk" width="54">
     <div id="myLinks">
       <a href="#news">News</a>
       <a href="#contact">Contact</a>
