flagene er kommet på plads

--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
       <canvas id="my_canvas" height="812"></canvas>
     </div>
     
-    <!-- Simulate a smartphone / tablet -->
+    
 <div class="wrapper">
-
-  <!-- Top Navigation Menu -->
+ 
   <div class="sidebar">
-    <a href="#home" class="active"><img src="img/logo-01.png" alt="Robot nordics logo" width="50"></a>
+    <a href="#home"><img src="img/logo-01.png" alt="Robot nordics logo" width="50"></a>
+
     <img class="dansk" src="img/dansk.jpg" alt="vælg sproget dansk" width="50">
     <img class="engelsk" src="img/engelsk.png" alt="vælg sproget engelsk" width="54">
+
     <div id="myLinks">
       <a href="#news">News</a>
       <a href="#contact">Contact</a>
