--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
 <form class="box" action="index.html" method="post">
   <h1> Login </h1>
-  <input type="text" name="" placeholder="Username">
-  <input type="password" name="" placeholder="password">
+  <input type="text" name="" placeholder="Brugernavn">
+  <input type="password" name="" placeholder="Kodeord">
   <input type="submit" name="" value="login">
 </form>
 
