--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 <!-- Links til font Raleway til tekst og Source Sans Pro til tal -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i&display=swap" rel="stylesheet">
 <!-- Link til burgermenu -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,7 +19,7 @@
     <div id="canvas_container">
       <canvas id="my_canvas" height="812"></canvas>
     </div>
-    
+
 <!-- Hele menubaren -->
 <div class="wrapper">
 
@@ -40,16 +40,17 @@
       <i class="fa fa-bars"></i>
     </a>
   </div>
-
+</div>
 
 <form class="box" action="index.html" method="post">
-  <h1> Login </h1>
+  <h1> Log ind </h1>
   <input type="text" name="" placeholder="Brugernavn">
   <input type="password" name="" placeholder="Kodeord">
-  <input type="submit" name="" value="login">
+  <input type="submit" name="" value="Log ind">
 </form>
 
- 
-  
+<button class="scan" type="button" name="button">Scan her</button>
+
+
   </body>
 </html>
