--- a/forside.html
+++ b/forside.html
@@ -11,6 +11,31 @@
     <title>Robot Nordic</title>
   </head>
 <body>
+<!-- Kørende baggrund. Her er der kun id til JS og højden på billedet -->
+<div id="canvas_container">
+    <canvas id="my_canvas" height="812"></canvas>
+  </div>
 
+<!-- Hele menubaren -->
+<div class="wrapper">
+
+<!-- Menubarens indhold, alt hvad der er inde i "wrapper"-->
+<div class="sidebar">
+  <a href="#home"><img src="img/logo-01.png" alt="Robot nordics logo" width="50"></a>
+
+  <img class="dansk" src="img/dansk.jpg" alt="vælg sproget dansk" width="50">
+  <img class="engelsk" src="img/engelsk.png" alt="vælg sproget engelsk" width="54">
+
+<!-- Burgermenuens indhold -->
+  <div id="myLinks">
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
+</div>
 </body>
 </html>
