tekstboks med budskabsdesign

--- a/forside.html
+++ b/forside.html
@@ -5,16 +5,20 @@
 <!-- Links til font Raleway til tekst og Source Sans Pro til tal -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i&display=swap" rel="stylesheet"> 
+<!-- Link til burgermenu -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Link til eksterne sider, Css og JavaScript -->
     <link rel="stylesheet" href="robotnordic.css">
     <script src="index.js" defer></script>
     <title>Robot Nordic</title>
   </head>
 <body>
+
 <!-- Kørende baggrund. Her er der kun id til JS og højden på billedet -->
 <div id="canvas_container">
     <canvas id="my_canvas" height="812"></canvas>
-  </div>
+</div>
 
 <!-- Hele menubaren -->
 <div class="wrapper">
@@ -27,15 +31,37 @@
   <img class="engelsk" src="img/engelsk.png" alt="vælg sproget engelsk" width="54">
 
 <!-- Burgermenuens indhold -->
-  <div id="myLinks">
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
-  </div>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
+    <div id="myLinks">
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+    </div>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+        </a>
+    </div>
 </div>
-</div>
+
+<!-- Knapper til undersider -->
+    <button class="menuknap" type="button">Create Template</button>
+    <button class="menuknap1" type="button">Control Panel</button>
+
+<h1 class="overskriftforside"> 
+   <b>Fra det øjeblik du træder ind over dørtrinet hos os, handler det om dig og din forretning</b>
+</h1>
+
+<h2 class="budskabstekst">
+    Vi i Robot Nordic kan hjælpe din produktionsvirksomhed med at blive mere effektiv. <br>
+    Kvaliteten og produktionen vil vi effektivisere og Robot Nordic står for hele processen. <br> <br>
+    Vores passion er at drive en virksomhed, hvor den enkelte kunde er i fokus. <br>
+    Vi ønsker at producere maskiner, som er tilpasset den enkelte kundes behov. Det bliver muligt for kunden at vælge bestemte komponenter på maskinerne, så kunden får den optimale tilfredsstillelse. <br> <br>
+    Samtidig er vi også opmærksom på prisen. Med en høj kvalitet og fokus på kunderne vil vi være billigere end vores konkurrenter. 
+    Vi vil nå vores passion med hjælp fra alle vores hårdtarbejdende medarbejdere, som har stor erfaring fra robot- og procesindustrien. 
+</h2>
+
+
+
+
+
 </body>
 </html>
