--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
   <h1> Log ind </h1>
   <input type="text" name="" placeholder="Brugernavn">
   <input type="password" name="" placeholder="Kodeord">
-  <input type="submit" name="" value="Log ind">
+  <a href="forside.html"><button class="log-ind" type="button" name="button"><img src="img/user-check.png" alt="User med flueben">
+    Log ind</button></a>
+
+
 </form>
 
 <button class="scan" type="button" name="button">Scan her</button>
