--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
 <!-- Burgermenuens indhold -->
     <div id="myLinks">
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
+      <a href="forside.html">Forside</a>
+      <a href="template.html">Create template</a>
+      <a href="panel.html">Control panel</a>
     </div>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
