--- a/forside.html
+++ b/forside.html
@@ -46,10 +46,11 @@
     <a href="template.html">
         <button class="menuknap" type="button">Create Template</button>
     </a>
-    <a href="panel.html"></a>
+    <a href="panel.html">
         <button class="menuknap1" type="button">Control Panel</button>
     </a> 
 
+<!-- Budskabsteksten -->
 <h1 class="overskriftforside"> 
    <b>Fra det øjeblik du træder ind over dørtrinet hos os, handler det om dig og din forretning</b>
 </h1>
