--- a/template.html
+++ b/template.html
@@ -42,5 +42,15 @@
     </div>
 </div>
 
+
+<label for="cars">Choose a car:</label>
+
+<select id="cars">
+  <option value="volvo">Volvo</option>
+  <option value="saab">Saab</option>
+  <option value="opel">Opel</option>
+  <option value="audi">Audi</option>
+</select>
+
 </body>
 </html>
