--- a/template.html
+++ b/template.html
@@ -43,14 +43,15 @@
 </div>
 
 
-<label for="cars">Choose a car:</label>
-
-<select id="cars">
-  <option value="volvo">Volvo</option>
-  <option value="saab">Saab</option>
-  <option value="opel">Opel</option>
-  <option value="audi">Audi</option>
-</select>
+<div class="custom-select" style="width:200px;">
+    <select>
+      <option value="0">Select car:</option>
+      <option value="1">Audi</option>
+      <option value="2">BMW</option>
+      <option value="3">Citroen</option>
+    </select>
+  </div>
+  
 
 </body>
 </html>
