--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
   <h1> Log ind </h1>
   <input type="text" name="" placeholder="Brugernavn">
   <input type="password" name="" placeholder="Kodeord">
-  <a href="forside.html"><button class="log-ind" type="button" name="button"><img src="img/user-check.png" alt="User med flueben">
+  <a href="forside.html"><button class="log-ind" type="button" name="button"><img class="log-ind-icon" src="img/user-check.png" alt="User med flueben">
     Log ind</button></a>
 
 
 </form>
 
-<button class="scan" type="button" name="button">Scan her</button>
+<button class="scan" type="button" name="button"><img class="qr-icon" src="img/qr_icon.png" alt="qr ikon">Scan her</button>
 
 
   </body>
