--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <!-- Menubarens indhold, alt hvad der er inde i "wrapper"-->
   <div class="sidebar">
-    <a href="#home"><img src="img/logo-01.png" alt="Robot nordics logo" width="50"></a>
+    <a href="#home"><img src="img/logo-uden-tekst.png" alt="Robot nordics logo" width="50"></a>
 
     <img class="dansk" src="img/dansk.jpg" alt="vælg sproget dansk" width="33">
     <img class="engelsk" src="img/engelsk.png" alt="vælg sproget engelsk" width="35">
