--- a/template.html
+++ b/template.html
@@ -5,6 +5,8 @@
 <!-- Links til font Raleway til tekst og Source Sans Pro til tal -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i&display=swap" rel="stylesheet">
+
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <!-- Link til burgermenu -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -46,7 +48,8 @@
 <div class="custom-select" style="width:200px;">
     <select>
       <option value="0">Palle</option>
-      <option value="1">Fyld </option>
+      <input type="text" name placeholder="Brugernavn">
+      <option value="1">Fyld</option>
       <option value="2">Dimension</option>
       <option value="3">Pakke Mønster</option>
     </select>
