--- a/template.html
+++ b/template.html
@@ -27,10 +27,10 @@
 
 <!-- Menubarens indhold, alt hvad der er inde i "wrapper"-->
 <div class="sidebar">
-  <a href="#home"><img src="img/logo-01.png" alt="Robot nordics logo" width="50"></a>
+  <a href="forside.html"><img src="img/logo-uden-tekst.png" alt="Robot nordics logo" width="50"></a>
 
-  <img class="dansk" src="img/dansk.jpg" alt="vælg sproget dansk" width="50">
-  <img class="engelsk" src="img/engelsk.png" alt="vælg sproget engelsk" width="54">
+  <img class="dansk" src="img/dansk.jpg" alt="vælg sproget dansk" width="33">
+  <img class="engelsk" src="img/engelsk.png" alt="vælg sproget engelsk" width="35">
 
 <!-- Burgermenuens indhold -->
     <div id="myLinks">
