Ikoner til forsiden

--- a/forside.html
+++ b/forside.html
@@ -44,10 +44,10 @@
 
 <!-- Knapper til undersider -->
     <a href="template.html">
-        <button class="menuknap" type="button">Create Template</button>
+        <button class="menuknap" type="button"><img src="img/file-text.png" alt="Fil med tekst"> Lav skabelon</button>
     </a>
     <a href="panel.html">
-        <button class="menuknap1" type="button">Control Panel</button>
+        <button class="menuknap1" type="button"><img src="img/calendar.png" alt="Kalender ikon"> Kontrol Panel</button>
     </a>
 
 <!-- Budskabsteksten -->
