--- a/forside.html
+++ b/forside.html
@@ -43,6 +43,7 @@
 </div>
 
 <!-- Knapper til undersider -->
+<main>
     <a href="template.html">
         <button class="menuknap" type="button"><img src="img/file-text.png" alt="Fil med tekst"> Lav skabelon</button>
     </a>
@@ -64,7 +65,7 @@
     Vi vil nå vores passion med hjælp fra alle vores hårdtarbejdende medarbejdere, som har stor erfaring fra robot- og procesindustrien.
 </h2>
 
-
+</main>
 
 
 
