--- a/forside.html
+++ b/forside.html
@@ -52,11 +52,15 @@
     </a>
 
 <!-- Budskabsteksten -->
+<div class="">
 <h1 class="overskriftforside">
-   <b>Fra det øjeblik du træder ind over dørtrinet hos os, handler det om dig og din forretning</b>
+  <img src="img/logo-uden-tekst-hvid.png" alt="Robot nordics logo">
+   <b>ROBOT NORDIC</b>
 </h1>
 
 <h2 class="budskabstekst">
+    <b>Fra det øjeblik du træder ind over dørtrinet hos os, handler det om dig og din forretning</b>
+    <br><br>
     Vi i Robot Nordic kan hjælpe din produktionsvirksomhed med at blive mere effektiv. <br>
     Kvaliteten og produktionen vil vi effektivisere og Robot Nordic står for hele processen. <br> <br>
     Vores passion er at drive en virksomhed, hvor den enkelte kunde er i fokus. <br>
@@ -64,6 +68,7 @@
     Samtidig er vi også opmærksom på prisen. Med en høj kvalitet og fokus på kunderne vil vi være billigere end vores konkurrenter.
     Vi vil nå vores passion med hjælp fra alle vores hårdtarbejdende medarbejdere, som har stor erfaring fra robot- og procesindustrien.
 </h2>
+</div>
 
 </main>
 
