dropdown on the way

--- a/forside.html
+++ b/forside.html
@@ -54,28 +54,16 @@
     </a>
 
     <!-- Budskabsteksten -->
-    <div class="custom-select2">
-      <select class="" name="">
-      <option value="0">
-      <h1 class="overskriftforside">
-        <img src="img/logo-uden-tekst-hvid.png" alt="Robot nordics logo">
-        <b>ROBOT NORDIC</b>
-      </h1>
-      </option>
-
-        <h2 class="budskabstekst">
 
 
-
-          <!--<b>Fra det øjeblik du træder ind over dørtrinet hos os, handler det om dig og din forretning</b>-->
-          Vi i Robot Nordic kan hjælpe din produktionsvirksomhed med at blive mere effektiv. <br>
-          Kvaliteten og produktionen vil vi effektivisere og Robot Nordic står for hele processen. <br> <br>
-          <!--Vores passion er at drive en virksomhed, hvor den enkelte kunde er i fokus. <br>
-    Vi ønsker at producere maskiner, som er tilpasset den enkelte kundes behov. Det bliver muligt for kunden at vælge bestemte komponenter på maskinerne, så kunden får den optimale tilfredsstillelse. <br> <br>
-    Samtidig er vi også opmærksom på prisen. Med en høj kvalitet og fokus på kunderne vil vi være billigere end vores konkurrenter.
-    Vi vil nå vores passion med hjælp fra alle vores hårdtarbejdende medarbejdere, som har stor erfaring fra robot- og procesindustrien.-->
-        </h2>
-        <option value="1">Læs mere...</option>
+    <div class="custom-select" style="width:250px;">
+      <select>
+        <option value="0"><img src="img/logo-uden-tekst-hvid.png" alt="Robot nordics logo">
+          ROBOT NORDIC</option>
+        <option value="1">Vi i Robot Nordic kan hjælpe din produktionsvirksomhed med at blive mere effektiv. <br>
+          Kvaliteten og produktionen vil vi effektivisere og Robot Nordic står for hele processen.</option>
+        <option value="2"><a href="https://robotnordic.dk/" target="_blank">Læs mere...</a></option>
+        <option value="3">Pakke Mønster</option>
       </select>
     </div>
 
