--- a/index.html
+++ b/index.html
@@ -33,15 +33,17 @@
       <img class="engelsk" src="img/engelsk.png" alt="vælg sproget engelsk" width="35">
     </div>
   </div>
-  <!-- Burgermenuens indhold -->
 
 
   <form class="box" action="index.html" method="post">
     <h1> Log ind </h1>
-    <input type="text" name="" placeholder="Brugernavn">
-    <input type="password" name="" placeholder="Kodeord">
-    <a href="forside.html"><button class="log-ind" type="button" name="button"><img class="log-ind-icon" src="img/user-check.png" alt="User med flueben">
-        Log ind</button></a>
+    <input type="text" name="brugernavn" placeholder="Brugernavn">
+    <input type="password" name="kodeord" placeholder="Kodeord">
+    <div class="log-ind">
+      <a href="forside.html"><img class="log-ind-icon" src="img/user-check.png" alt="User med flueben">
+          Log ind</a>
+    </div>
+
 
 
   </form>
