--- a/template.html
+++ b/template.html
@@ -27,10 +27,10 @@
 
 <!-- Menubarens indhold, alt hvad der er inde i "wrapper"-->
 <div class="sidebar">
-  <a href="forside.html"><img src="img/logo-uden-tekst.png" alt="Robot nordics logo" width="50"></a>
+  <a href="#home"><img src="img/logo-01.png" alt="Robot nordics logo" width="50"></a>
 
-  <img class="dansk" src="img/dansk.jpg" alt="vælg sproget dansk" width="33">
-  <img class="engelsk" src="img/engelsk.png" alt="vælg sproget engelsk" width="35">
+  <img class="dansk" src="img/dansk.jpg" alt="vælg sproget dansk" width="50">
+  <img class="engelsk" src="img/engelsk.png" alt="vælg sproget engelsk" width="54">
 
 <!-- Burgermenuens indhold -->
     <div id="myLinks">
@@ -48,6 +48,7 @@
 <div class="custom-select" style="width:200px;">
     <select>
       <option value="0">Palle</option>
+      <input type="text" name placeholder="Brugernavn">
       <option value="1">Fyld</option>
       <option value="2">Dimension</option>
       <option value="3">Pakke Mønster</option>
