--- a/Styleguide/styleguide.html
+++ b/Styleguide/styleguide.html
@@ -8,63 +8,69 @@
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap" rel="stylesheet">
         </head>
     <body>
-<header>Style Guide Projekt 6</header>
+<header><h1>STYLEGUIDE - ROBOTNORDIC</h1></header>
 
-<h1 class="overskrifter"> Typografi</h1>
+<section class="typo">
+
+<h2 class="overskrifter"> Typografi</h2>
     <br>
-        <a> Der er to typer typografi da Raleway er udfordrende at læse når det kommer til tal. <br>
-            Derfor er Source Sans Pro kun til brug i tal. 
-        </a>
-    <br>
-    <br>
-        <a class="raleway"> 
+        <p> Der er to typer typografi da Raleway er udfordrende at læse når det kommer til tal. <br>
+            Derfor er Source Sans Pro kun til brug i tal.
+        </p>
+        <div class="grafi">
+
+        <p class="raleway">
             Raleway <br>
-            Bruges kun i tekst <br>
-            ABC <br>
-            abc <br>
-            <b>ABC <br>
-            abc</b> <br>
-            HTML: link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet" 
-        </a>
-    <br>
-    <br>
-        <a class="source"> 
+            Bruges kun i tekst <br><br>
+            ABC <b>ABC</b><br>
+            abc <b>abc</b><br><br>
+            <a href="https://fonts.google.com/specimen/Raleway?query=ralewa" target="_blank">HTML: link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet"</a>
+        </p>
+        <p class="source">
             Source Sans Pro <br>
-            Bruges kun til tal <br>
+            Bruges kun til tal <br><br>
             12345 <br>
-            <b> 12345 </b> <br>
-            HTML: link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap" rel="stylesheet" 
-        </a>
+            <b> 12345 </b> <br><br>
+            <a href="https://fonts.google.com/specimen/Source+Sans+Pro?query=sour" target="_blank">HTML: link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap" rel="stylesheet"</a>
+        </p>
+        </div>
+</section>
 
-
+<section class="farve">
 <h2 class="overskrifter"> Farver </h2>
-    <br> 
-        <a class="hvid"> #EBFFF3 </a>
-        <a class="grøn"> #72A895 </a>
-        <a class="lysorange"> #FF7152 </a>
-        <a class="orange"> #F25835 </a>
-        <a class="sort"> #313C40 </a>
-    <br>
-    <br>
-    <br>
-
-<h3 class="overskrifter"> Former </h3>
-    <br>
-        <a> Disse former skal bruges i baggrunden på hjemmesiden, for at skabe en levende oplavelse. </a>
-    <br>
+<p>Her er de farver vi bruger til vores brugergrænseflade</p>
+  <div class="colors">
+        <a class="hvid">#EBFFF3</a>
+        <a class="blue">#5EB5EB</a>
+        <a class="lysorange">#FF7152</a>
+        <a class="orange">#F25835</a>
+        <a class="sort">#313C40</a>
+    </div>
+</section>
+<section class="former">
+<h3 class="overskrifter">Billeder</h3>
+        <p> Disse billeder skal bruges i baggrunden på hjemmesiden, for at skabe en levende oplavelse. <br>
+          Også er der logoet som vil blive vist i top venstre hjørne.</p>
         <img class="form" src="6.png" alt="sekskantet figur som skal være i baggrunden af robot nordics side">
-    <br> 
-        <a> Disse former skal bruges til sidens knapper.<br>
-            Knapperne har en hover effekt på desktop versionen, <br> 
-            og på mobil versionen  er der en onclick effekt.
-        </a>
-    <br>
-    <br>
-    <a class="orangeknap"> <b> Knap </b> </a>
-    <br>
-    <br>
-    <br>
-    <a class="sortknap"> <b>Knap</b></a>
+        <img class="form2" src="/img/logo-uden-tekst.png" alt="Robot Nordics Logo" width="10%">
+</section>
+<section class="ik-knap">
+<h4 class="overskrifter">Ikoner</h4>
+    <p> Disse ikoner skal bruges til sidens knapper.<br>
+    </p>
+<div class="icons">
+<img src="/img/qr_icon.png" alt="QR scan ikonet" width="7%">
+<img src="/img/user-check.png" alt="Person med flueben som log ind ikon">
+<img src="" alt="">
+</div>
 
+<h4 class="overskrifter">Knapper</h4>
+<p>Knapperne har en hover effekt på desktop versionen, <br>
+og på mobil versionen  er der en onclick effekt.</p>
+<div class="knapper">
+    <a class="orangeknap"> <b> Knap </b> </a>
+    <a class="sortknap"> <b>Knap</b></a>
+    </div>
+</section>
     </body>
 </html>
