--- a/Styleguide/styleguide.html
+++ b/Styleguide/styleguide.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <h1>STYLEGUIDE - ROBOTNORDIC</h1>
+    <h1>STYLEGUIDE - ROBOT NORDIC</h1>
     <p>Gruppe 14</p>
   </header>
 
@@ -43,7 +43,7 @@
 
   <section class="farve">
     <h2 class="overskrifter"> Farver </h2>
-    <p>Her er de farver vi bruger til vores brugergrænseflade</p>
+    <p>Her er de farver vi bruger til vores brugergrænseflade.</p>
     <div class="colors">
       <a class="hvid">#EBFFF3</a>
       <a class="blue">#5EB5EB</a>
@@ -67,15 +67,45 @@
       <img class="qr" src="/img/qr_icon.png" alt="QR scan ikonet">
       <img class="user" src="/img/user-check.png" alt="Person med flueben som log ind ikon">
     </div>
-
+</section>
+<section class="knap-sec">
     <h4 class="overskrifter">Knapper</h4>
     <p>Knapperne har en hover effekt på desktop versionen, <br>
       og på mobil versionen er der en onclick effekt.</p>
     <div class="knapper">
-      <a class="orangeknap"> <b> Knap </b> </a>
-      <a class="sortknap"> <b>Knap</b></a>
+      <a class="orangeknap"><b>Knap</b></a>
+      <a class="blueknap"><b>Knap</b></a>
     </div>
-  </section>
+</section>
+<section  class="css-bag">
+<h4 class="overskrifter">CSS</h4>
+<p>Her ses css koden bag knapperne. Og koden her er fra den blå knap.</p>
+
+    <div class="kode">
+      <p>
+        .blueknap {<br>
+        font-family: 'Raleway', sans-serif;<br>
+        border: 0;<br>
+        background: none;<br>
+        display: block;<br>
+        margin: 20px 140px auto;<br>
+        text-align: center;<br>
+        border: 2px solid #5eb5eb;<br>
+        padding: 14px;<br>
+        width: 5%;<br>
+        outline: none;<br>
+        color: #000000;<br>
+        border-radius: 18px;<br>
+        transition: 0.25s;<br>
+        display: block;<br>
+      }
+<br><br>
+      .blueknap:hover {<br>
+        background-color: #5eb5eb;<br>
+        color: #ffffff;<br>
+      }</p>
+      </div>
+</section>
 </body>
 
 </html>
