log ud ikon tilføjet

--- a/template.html
+++ b/template.html
@@ -28,7 +28,7 @@
 <!-- Menubarens indhold, alt hvad der er inde i "wrapper"-->
 <div class="sidebar">
   <a href="#home"><img src="img/logo-01.png" alt="Robot nordics logo" width="50"></a>
-
+  <img class="log-out" src="img/log-out.png" alt="En der viser vejen ud">
   <img class="dansk" src="img/dansk.jpg" alt="vælg sproget dansk" width="50">
   <img class="engelsk" src="img/engelsk.png" alt="vælg sproget engelsk" width="54">
 
