--- a/forside.html
+++ b/forside.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8">
   <!-- Links til font Raleway til tekst og Source Sans Pro til tal -->
@@ -41,21 +40,19 @@
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
-    </div>
   </div>
 
   <!-- Knapper til undersider -->
   <main>
     <a href="template.html">
-      <button class="menuknap" type="button"><img src="img/file-text.png" alt="Fil med tekst"> Lav skabelon</button>
+      <button class="menuknap" type="button"><img src="img/file-text.png" alt="Fil med tekst" width="10%"> Lav skabelon</button>
     </a>
     <a href="panel.html">
-      <button class="menuknap1" type="button"><img src="img/calendar.png" alt="Kalender ikon"> Kontrol Panel</button>
+      <button class="menuknap1" type="button"><img src="img/calendar.png" alt="Kalender ikon" width="10%"> Kontrol Panel</button>
     </a>
 
+
     <!-- Budskabsteksten -->
-
-
     <div class="custom-select" style="width:250px;">
       <select>
         <option value="0"><img src="img/logo-uden-tekst-hvid.png" alt="Robot nordics logo">
