--- a/forside.html
+++ b/forside.html
@@ -26,8 +26,8 @@
 
     <!-- Menubarens indhold, alt hvad der er inde i "wrapper"-->
     <div class="sidebar">
-      <a href="#forside.html"><img src="img/logo-uden-tekst.png" alt="Robot nordics logo" width="50"></a>
-      <img class="log-out" src="img/log-out.png" alt="En der viser vejen ud">
+      <a href="forside.html"><img src="img/logo-uden-tekst.png" alt="Robot nordics logo" width="50"></a>
+
       <img class="dansk" src="img/dansk.jpg" alt="vælg sproget dansk" width="33">
       <img class="engelsk" src="img/engelsk.png" alt="vælg sproget engelsk" width="35">
 
@@ -40,6 +40,7 @@
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
+    </div>
   </div>
 
   <!-- Knapper til undersider -->
