seperat template js side

--- a/template.html
+++ b/template.html
@@ -13,6 +13,8 @@
 <!-- Link til eksterne sider, Css og JavaScript -->
     <link rel="stylesheet" href="robotnordic.css">
     <script src="index.js" defer></script>
+    <script src="template.js" defer></script>
+
     <title>Robot Nordic</title>
   </head>
 <body>
