--- a/forside.html
+++ b/forside.html
@@ -27,7 +27,7 @@
     <!-- Menubarens indhold, alt hvad der er inde i "wrapper"-->
     <div class="sidebar">
       <a href="forside.html"><img src="img/logo-uden-tekst.png" alt="Robot nordics logo" width="50"></a>
-
+      <img class="log-out" src="img/log-out.png" alt="En pil der peger væk fra en dør">
       <img class="dansk" src="img/dansk.jpg" alt="vælg sproget dansk" width="33">
       <img class="engelsk" src="img/engelsk.png" alt="vælg sproget engelsk" width="35">
 
