--- a/template.html
+++ b/template.html
@@ -5,7 +5,7 @@
 <!-- Links til font Raleway til tekst og Source Sans Pro til tal -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i&display=swap" rel="stylesheet">
-    
+
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <!-- Link til burgermenu -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,10 +30,10 @@
 <!-- Menubarens indhold, alt hvad der er inde i "wrapper"-->
     <div class="sidebar">
       <a href="forside.html"><img src="img/logo-uden-tekst.png" alt="Robot nordics logo" width="50"></a>
-  
+  <img class="log-out" src="img/log-out.png" alt="En pil der peger væk fra en dør">
     <img class="dansk" src="img/dansk.jpg" alt="vælg sproget dansk" width="33">
     <img class="engelsk" src="img/engelsk.png" alt="vælg sproget engelsk" width="35">
-  
+
   <!-- Burgermenuens indhold -->
     <div id="myLinks">
       <a href="forside.html">Forside</a>
@@ -45,7 +45,7 @@
         </a>
     </div>
   </div>
-  
+
 
 <!-- drop down med palle
 <h2>Clickable Dropdown</h2>
