log-ind ikon rettet

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
   <h1> Log ind </h1>
   <input type="text" name="" placeholder="Brugernavn">
   <input type="password" name="" placeholder="Kodeord">
-  <a href="forside.html"><button class="log-ind" type="button" name="button"><img class="log-ind-icon" src="img/user-check.png" alt="User med flueben">
-    Log ind</button></a>
+  <div class="log-ind">
+  <a href="forside.html"><img class="log-ind-icon" src="img/user-check.png" alt="User med flueben">
+    Log ind</a></div>
 
 
 </form>
