--- a/template.html
+++ b/template.html
@@ -77,6 +77,17 @@
 <button class="accordion">Palle</button>
 <div class="panel">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<!-- infoknap-->
+  <button id="myBtn" img src="img/infoknap.png"></button>
+  <div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+    </div>
+
+  </div>
 
   <div class="dropdown">
     <button onclick="myFunction()" class="dropbtn">Dropdown</button>
